# Active-Inference-Exploration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
exploration/: KLcontrol_linearSystem.py  KLcontrol_nonLinearSystem.py  KLcontrol_nonLinearSystem_README.md  prompt_save.md
